# korean_learning_chatbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HYDE_IMPLEMENTATION_GUIDE.md  README.md  TODO.md  bot.py  compose  compose-old  compose-old.yml  compose.yml  foo  main.py  paper.txt  pyproject.toml  requirements.txt  restart_all.sh  start_all.sh  stop_all.sh  tmux.sh
.devcontainer/: devcontainer.json
.github/workflows/: pull-project.yml
agent/: chatbot.py
agent/schemas/: schemas.py
alembic/: env.py
alembic/versions/: 03484f5cf53a_add_is_active_column_to_message_blobs.py  0cc9aabce180_create_tables.py  1bbd2e8fad28_changed_ids_into_int64.py  28353e641c3b_removed_chat_model_and_put_messages_to_.py  38d269fd5ac6_.py  4d7413a123fc_some_fixes.py  8a21db3d6219_init.py  dcf7c2bb6cfd_made_username_optional.py
api/: Dockerfile  main.py
data/grammar-level-1/: entries.json  generated-data.md  grammar_list.md  grammar_list_clean.md  grammar_list_clean_word2md.csv  grammar_list_clean_word2md.md  grammar_list_word2md.md
data/howtostudykorean/: combined.md
infrastructure/api/: README.md
infrastructure/database/: README.md  setup.py
infrastructure/migrations/: env.py
infrastructure/some_api/: README.md
llm_agent/: __init__.py  agent.py
nginx/: nginx.conf
notebooks/: README.md  create_qdrant_collection.ipynb  ingest.ipynb  parse_md_to_json_old.py  preprocess_grammar_list.ipynb
scripts/: README.md  create_qdrant_collection.py  parse.py  query_qdrant.py
src/api/: Dockerfile  README.md  foo.py  main.py
src/config/: README.md  prompts.py  settings.py
src/db/: README.md  crud.py  database.py  models.py
src/examples_for_claude/: chat_history.py
src/llm_agent/: README.md  agent.py  agent_tools.py  agent_tools_old.py
src/qdrant_db/: README.md  create_qdrant_collection.py  parse_md_to_json.py
src/schemas/: README.md  schemas.py
src/tests/: test_main.py
src/tgbot/: Dockerfile  README.md  bot.py
src/utils/: README.md  json_to_telegram_md.py  json_to_telegram_md_old.py  md_to_json.py  parse_entry_for_embedding.py  strip_markdown.py
tgbot/: Dockerfile  README.md  bot.py
tgbot/filters/: README.md  admin.py
tgbot/handlers/: admin.py  api_integration.py  echo.py  help.py  simple_menu.py  user.py
tgbot/keyboards/: README.md  inline.py
(+577 files in other folders)
