[project]
name = "korean-learning-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram~=3.0",
    "alembic~=1.0",
    "asyncpg>=0.30.0",
    "backoff>=2.2.1",
    "betterlogging>=1.0.0",
    "environs~=9.0",
    "redis>=5.2.1",
    "sqlalchemy~=2.0",
    "ujson>=5.10.0",
    "yarl>=1.18.3",
]
