[project]
name = "korean-learning-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram~=3.0",
    "alembic~=1.0",
    "asyncpg>=0.30.0",
    "backoff>=2.2.1",
    "betterlogging>=1.0.0",
    "chatgpt-md-converter>=0.3.4",
    "environs~=9.0",
    "fastapi[standard]>=0.115.11",
    "fastembed>=0.6.0",
    "jupyter>=1.1.1",
    "krdict-py>=3.0.2",
    "langchain-text-splitters>=0.3.9",
    "logfire[fastapi,sqlalchemy]>=3.9.0",
    "lxml>=5.3.1",
    "markdown>=3.8",
    "pandas>=2.3.0",
    "psycopg>=3.2.6",
    "psycopg-binary>=3.2.6",
    "psycopg-pool>=3.2.6",
    "pydantic-ai[logfire]>=0.0.41",
    "pydantic-settings>=2.8.1",
    "qdrant-client>=1.13.3",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "ruff>=0.11.6",
    "sentence-transformers>=4.0.2",
    "sqlalchemy[asyncio]~=2.0",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
    "yarl>=1.18.3",
]

[dependency-groups]
api = [
    "fastembed>=0.6.0",
    "sentence-transformers>=4.0.2",
]
tgbot = [
    "aiogram>=3.18.0",
    "betterlogging>=1.0.0",
    "chatgpt-md-converter>=0.3.4",
    "environs>=9.5.0",
    "krdict-py>=3.0.2",
    "lxml>=5.3.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
]
